--- a/ProyectoAplicadaI/UI/VentanasReportes/ArticulosReporte.resx
+++ b/ProyectoAplicadaI/UI/VentanasReportes/ArticulosReporte.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAgBAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANzY
+        z//c2M//3NjP/9zYz//c2M//3NjP/9zYz//c2M//3NjP/9zYz//c2M//3NjP/9zYz//c2M//3NjP/9zY
+        z//c2M//3NjP/9zYz//c2M//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA3NjP/9zYz//c2M//3NjP/9zYz//c2M//3NjP/9zYz//c2M//3NjP/9zYz//c2M//3NjP/9zY
+        z//c2M//3NjP/9zYz//c2M//3NjP/9zYz/8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAADc2M//3NjP/9zYz//c2M//3NjP/9zYz//c2M//3NjP/9zYz//c2M//3NjP/9zY
+        z//c2M//3NjP/9zYz//c2M//3NjP/9zYz//c2M//3NjP/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAANzYz//c2M//3NjP/9zYz//c2M//3NjP/9jTyf/FvrD/uK+d/7Cm
+        kv+wppL/uK+d/8W+sP/Y1Mr/3NjP/9zYz//c2M//3NjP/9zYz//c2M//AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA3NjP/9zYz//c2M//3NjP/9zYz//Lxrn/r6aT/66k
+        kP+upJD/rqSQ/66kkP+upJD/rqSQ/7Cmk//Mxrn/3NjP/9zYz//c2M//3NjP/9zYz/8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADc2M//3NjP/9zYz//c2M//zce6/66k
+        kP+upJD/qaCM/4h/bf9zaln/c2pZ/4mAbv+qoYz/rqSQ/66kkP/NyLr/3NjP/9zYz//c2M//3NjP/wAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANzYz//c2M//3NjP/9jU
+        yv+wp5P/rqSQ/56UgP9ZUUH/T0c3/09HN/9PRzf/T0c3/1pSQv+elYH/rqSQ/7GolP/Z1Mv/3NjP/9zY
+        z//c2M//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA3NjP/9zY
+        z//c2M//xb6u/66kkP+poIz/WlJC/09HN/9PRzf/T0c3/09HN/9PRzf/T0c3/1pSQv+qoYz/rqSQ/8W+
+        sP/c2M//3NjP/9zYz/8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AADc2M//3NjP/9zYz/+3rZv/rqSQ/4d+a/9PRzf/T0c3/09HN/9PRzf/T0c3/09HN/9PRzf/T0c3/4h/
+        bf+upJD/t66c/9zYz//c2M//3NjP/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAANzYz//c2M//3NjP/7Cmk/+upJD/c2pY/09HN/9PRzf/T0c3/09HN/9PRzf/T0c3/09H
+        N/9PRzf/dGtZ/66kkP+wp5T/3NjP/9zYz//c2M//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA3NjP/9zYz//c2M//sKaT/66kkP9zalj/T0c3/09HN/9PRzf/T0c3/09H
+        N/9PRzf/T0c3/09HN/90a1n/rqSQ/7CnlP/c2M//3NjP/9zYz/8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADc2M//3NjP/9zYz/+3rZv/rqSQ/4d+a/9PRzf/T0c3/09H
+        N/9PRzf/T0c3/09HN/9PRzf/T0c3/4h/bf+upJD/t66c/9zYz//c2M//3NjP/wAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANzYz//c2M//3NjP/8W+rv+upJD/qaCM/1pS
+        Qv9PRzf/T0c3/09HN/9PRzf/T0c3/09HN/9aUkL/qqGM/66kkP/FvrD/3NjP/9zYz//c2M//AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA3NjP/9zYz//c2M//2NTK/7Cn
+        k/+upJD/npSA/1lRQf9PRzf/T0c3/09HN/9PRzf/WlJC/56Vgf+upJD/saiU/9nUy//c2M//3NjP/9zY
+        z/8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADc2M//3NjP/9zY
+        z//c2M//zce6/66kkP+upJD/qaCM/4h/bf9zaln/c2pZ/4mAbv+qoYz/rqSQ/66kkP/NyLr/3NjP/9zY
+        z//c2M//3NjP/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANzY
+        z//c2M//3NjP/9zYz//c2M//y8a5/6+mk/+upJD/rqSQ/66kkP+upJD/rqSQ/66kkP+wppP/zMa5/9zY
+        z//c2M//3NjP/9zYz//c2M//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA3NjP/9zYz//c2M//3NjP/9zYz//c2M//2NPJ/8W+sP+4r53/sqmW/7Kplv+4r53/xb6w/9jU
+        yv/c2M//3NjP/9zYz//c2M//3NjP/9zYz/8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAADc2M//3NjP/9zYz//c2M//3NjP/9zYz//c2M//3NjP/9zYz//c2M//3NjP/9zY
+        z//c2M//3NjP/9zYz//c2M//3NjP/9zYz//c2M//3NjP/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAALSuof+0rqH/tK6h/7Suof+0rqH/tK6h/7Suof+0rqH/tK6h/7Su
+        of+0rqH/tK6h/7Suof+0rqH/tK6h/7Suof+0rqH/tK6h/7Suof+0rqH/AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAZFpF/2RaRf9kWkX/ZFpF/2RaRf9kWkX/ZFpF/2Ra
+        Rf9kWkX/ZFpF/2RaRf9kWkX/ZFpF/2RaRf9kWkX/ZFpF/2RaRf9kWkX/ZFpF/2RaRf8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABkWkX/aF9J/3VrVv9lW0b/b2VQ/25l
+        UP9kWkX/ZFpF/2pgS/+kmYX/o5qG/2phS/9kWkX/ZFpF/19oVP9WhXL/VoVy/1aFcv9bdmP/ZFpF/wAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGRaRf+QhnH/rqSQ/3ds
+        WP+on4r/qJ2K/2RaRf9kWkX/eG5Z/66kkP+upJD/d25Z/2RaRf9kWkX/VoVy/znczf853M3/OdzN/0ey
+        oP9kWkX/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAZFpF/3Vr
+        Vv+QhnH/aF9J/4R6Zv+Eemb/ZFpF/2RaRf9lXEb/i4Fs/4qBbf9lW0b/ZFpF/2RaRf9bdmP/R7Kg/0ey
+        oP9HsqD/UJSC/2RaRf8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABkWkX/ZFpF/2RaRf9kWkX/ZFpF/2RaRf9kWkX/ZFpF/2RaRf9kWkX/ZFpF/2RaRf9kWkX/ZFpF/2Ra
+        Rf9kWkX/ZFpF/2RaRf9kWkX/ZFpF/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA//////////////////////wAAD/8AAA//AAAP/wAAD/8AAA//AAAP/wA
+        AD/8AAA//AAAP/wAAD/8AAA//AAAP/wAAD/8AAA//AAAP/wAAD/8AAA//AAAP/wAAD/8AAA//AAAP/wA
+        AD/8AAA//AAAP/////////////////////8=
+</value>
+  </data>
 </root>
