--- a/ProyectoAplicadaI/UI/VentanasReportes/VentanaReciboReporte.resx
+++ b/ProyectoAplicadaI/UI/VentanasReportes/VentanaReciboReporte.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAgBAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADpycWr6crF/+nKxf/pysX/6crF/+nK
+        xf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nK
+        xf/pycWrAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOnJxavpysX/6crF/+nK
+        xf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nK
+        xf/pysX/6crF/+nJxasAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA6cnFq+nK
+        xf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/16KY/7VRP/+1UT//tVE//7VRP/+1UT//xnlr/+nK
+        xf/Xopj/tVE//7VRP//Xopj/6cnFqwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AADpycWr6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/jvbb/16KY/9eimP/Xopj/16KY/9ei
+        mP/esKj/6crF/+O9tv/Xopj/16KY/+O9tv/pycWrAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAOnJxavpysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nK
+        xf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nJxasAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA37ew0d+0rP/ftKz/37Ss/9+0rP/ftKz/37Ss/9+0rP/ftKz/37Ss/9+0
+        rP/ftKz/37Ss/9+0rP/ftKz/37Ss/9+0rP/ftKz/37Ss/9+0rP/ftKz/37ew0QAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADpycWr6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nK
+        xf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pycWrAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOnJxavpysX/6crF/+nKxf/pysX/6crF/+nK
+        xf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nJ
+        xasAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA6cnFq+nKxf/AdGf/wHRn/+nK
+        xf+rSTn/q0k5/6tJOf+rSTn/wHRn/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/Un5b/q0k5/6tJ
+        Of/Un5b/6cnFqwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADpycWr6crF/9yu
+        p//crqf/6crF/9Sflv/Un5b/1J+W/9Sflv/crqf/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+K8
+        tf/Un5b/1J+W/+K8tf/pycWrAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOnJ
+        xavpysX/3K6n/9yup//pysX/1J+W/9Sflv/Un5b/1J+W/9Sflv/Un5b/1J+W/9Sflv/crqf/6crF/+nK
+        xf/pysX/4ry1/9Sflv/Un5b/4ry1/+nJxasAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA6cnFq+nKxf/AdGf/wHRn/+nKxf+rSTn/q0k5/6tJOf+rSTn/q0k5/6tJOf+rSTn/q0k5/8B0
+        Z//pysX/6crF/+nKxf/Un5b/q0k5/6tJOf/Un5b/6cnFqwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAADpycWr6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nK
+        xf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pycWrAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAOnJxavpysX/zZGG/82Rhv/pysX/wHRn/8B0Z//AdGf/wHRn/8B0
+        Z//AdGf/wHRn/9yup//pysX/6crF/+nKxf/pysX/3K6n/8B0Z//AdGf/3K6n/+nJxasAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA6cnFq+nKxf/NkYb/zZGG/+nKxf/AdGf/wHRn/8B0
+        Z//AdGf/wHRn/8B0Z//AdGf/3K6n/+nKxf/pysX/6crF/+nKxf/crqf/wHRn/8B0Z//crqf/6cnFqwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADpycWr6crF/+nKxf/pysX/6crF/+nK
+        xf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nK
+        xf/pycWrAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOnJxavpysX/wHRn/8B0
+        Z//pysX/q0k5/6tJOf+rSTn/q0k5/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/1J+W/6tJ
+        Of+rSTn/1J+W/+nJxasAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA6cnFq+nK
+        xf/crqf/3K6n/+nKxf/Un5b/1J+W/9Sflv/Un5b/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nK
+        xf/ivLX/1J+W/9Sflv/ivLX/6cnFqwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AADpycWr6crF/9yup//crqf/6crF/9Sflv/Un5b/1J+W/9Sflv/Un5b/1J+W/9Sflv/Un5b/6crF/+nK
+        xf/pysX/6crF/+K8tf/Un5b/1J+W/+K8tf/pycWrAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAOnJxavpysX/wHRn/8B0Z//pysX/q0k5/6tJOf+rSTn/q0k5/6tJOf+rSTn/q0k5/6tJ
+        Of/pysX/6crF/+nKxf/pysX/1J+W/6tJOf+rSTn/1J+W/+nJxasAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA6cnFq+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nK
+        xf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6cnFqwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADpycWr6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nK
+        xf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pycWrAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAN+3sNHftKz/37Ss/9+0rP/ftKz/37Ss/9+0
+        rP/ftKz/37Ss/9+0rP/ftKz/37Ss/9+0rP/ftKz/37Ss/9+0rP/ftKz/37Ss/9+0rP/ftKz/37Ss/9+3
+        sNEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA6cnFq+nKxf/pysX/6crF/+nK
+        xf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nK
+        xf/pysX/6cnFqwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADpycWr6crF/+nK
+        xf/pysX/6crF/9eimP/Xopj/16KY/9eimP/Xopj/16KY/9eimP/Xopj/16KY/9eimP/Xopj/16KY/96w
+        qP/pysX/6crF/+nKxf/pycWrAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOnJ
+        xavpysX/6crF/+nKxf/pysX/tVE//7VRP/+1UT//tVE//7VRP/+1UT//tVE//7VRP/+1UT//tVE//7VR
+        P/+1UT//xnlr/+nKxf/pysX/6crF/+nJxasAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA6cnFq+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nK
+        xf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6cnFqwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAADpycWr6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nK
+        xf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pysX/6crF/+nKxf/pycWrAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA///////////4AAAf+AAAH/gAAB/4AAAf+AAAH/gAAB/4AAAf+AAAH/gA
+        AB/4AAAf+AAAH/gAAB/4AAAf+AAAH/gAAB/4AAAf+AAAH/gAAB/4AAAf+AAAH/gAAB/4AAAf+AAAH/gA
+        AB/4AAAf+AAAH/gAAB/4AAAf//////////8=
+</value>
+  </data>
 </root>
